Day 2 initial commit

--- a/DaysProgress/Day1/day1.html
+++ b/DaysProgress/Day1/day1.html
@@ -68,7 +68,7 @@
  <header>
     <div class="row">
         <div class="col-2"><img src="BPIT.jpg" alt="BPIT" width="35%"></div>
-        <div href="https://bpitindia.ac.in/" class="col-10"><h1>Bhagwan Parshuram Institute of Technology</h1></div>
+        <a href="https://bpitindia.ac.in/" class="col-10"><h1>Bhagwan Parshuram Institute of Technology</h1></a>
     </div>
     </header>
     <main>
@@ -105,7 +105,7 @@
     </main>
     <footer class="row" style="height: 50px; width: 99vw; margin-top: 7px;">
         <h5 style="padding: 10px;">Address: PSP-4, Sector-17, Rohini, Delhi-110089</h5>
-        <h5 href="bpitindia@yahoo.com" style="padding: 10px; margin:0 auto">Contact us at Mail</h5>
+        <a href="bpitindia@yahoo.com" style="padding: 10px; margin:0 auto"><h5>Contact us at Mail</h5></a>
     </footer>
 
 </body>
