Day 3 initial commit

--- a/Project/Web Resume/MyWebResume.html
+++ b/Project/Web Resume/MyWebResume.html
@@ -39,12 +39,14 @@
         }
         main{
             display: flex;
-            justify-content: space-;
+            /*justify-content: space-between;*/
         }
     </style>
 </head>
 <body>
-    <header><h1>My Web Resume</h1></header>
+    <header>
+        <h1>My Web Resume</h1>
+    </header>
     <main>
         <section class="Left">
             Left
@@ -53,6 +55,6 @@
             <p>Right</p>
         </section>
     </main>
-    <footer>&copy; 2025 Kautilya Jaiswal</footer>
+    <footer>&copy; 2025 KautilyaJaiswal</footer>
 </body>
 </html>
