Web Resume Updated

--- a/Project/Web Resume/MyWebResume.html
+++ b/Project/Web Resume/MyWebResume.html
@@ -16,7 +16,7 @@
             border-radius: 7px;
             color: white;
             text-align: center;
-            margin: 2px;
+            margin: 4px;
         }
 
         .Left{
@@ -24,37 +24,85 @@
             border-radius: 10px;
             text-align: center;
             width: 30vw;
-            margin: 5px;
+            padding: 0 8px;
+
         }
         .Right{
             border:2px solid rgb(127, 209, 241);
             border-radius: 10px;
-            text-align:center;
+            padding: 2px 7px;
             width: 70vw;
             height: 90vh;
-            margin: 5px;
+
         }
         .Left, .Right{
-            box-shadow: 3px 3px rgb(184, 230, 248);
+            box-shadow: 0 0 8px rgb(184, 230, 248);
+            margin: 4px;
         }
         main{
             display: flex;
-            /*justify-content: space-between;*/
+            justify-content: space-between;
+            margin: 1px 4px;
+        }
+        #profile{
+            border: 2px solid black;
+            border-radius: 50%;
+            margin: 5px;
+        }
+        #project-list{
+            padding-left: 20px;
+        }
+        @media screen and (max-width:760px){
+            main{
+                flex-direction: column;
+            }
+            .Left{
+                width:100vw;
+            }
+            .Right{
+                width: 100vw;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>My Web Resume</h1>
+        <h1 style="padding: 5px;">My Web Resume</h1>
     </header>
     <main>
         <section class="Left">
-            Left
+            <h2>Contact</h2>
+            <br>
+            <ul style="list-style: none; text-align: left;">
+                <li><b>Email:</b> kautilyajaiswal1@gmail.com</li>
+                <li><b>Phone:</b> 7217807303</li>
+                <li><b>City:</b> New Delhi, India</li>
+            </ul>
         </section>
         <section class="Right">
-            <p>Right</p>
+            <img src="profile.jpg" alt="Student Name" style="width: 70px;" id="profile">
+            <br>
+            <h2>Kautilya Jaiswal</h2>
+            <p>A motivated and curious Information Technology undergraduate, actively building foundational knowledge in cybersecurity. Passionate
+            about understanding how digital systems can be protected from emerging threats, and driven by a broader interest in technological
+            innovation and problem-solving. Eager to apply and enhance my skills through hands-on projects, internships, and collaborative
+            opportunities. Committed to evolving as a well-rounded professional capable of contributing to the development of secure, efficient,
+            and impactful tech solutions.</p>
+            <br>
+            <h2>Education</h2>
+            <p>B.Tech in Information Technology, GGSIP University, New Delhi</p>
+            <p>2023 - Present</p>
+            <br>
+            <h2>Projects</h2>
+            <br>
+            <div id="project-list">
+            <li>Web Resume</li>
+            <li>To Do App</li>
+            </div>
         </section>
     </main>
-    <footer>&copy; 2025 KautilyaJaiswal</footer>
+    <footer>
+        &copy; 2025 KautilyaJaiswal
+    </footer>
 </body>
 </html>
