final commit for day 3

--- a/Project/Web Resume/MyWebResume.html
+++ b/Project/Web Resume/MyWebResume.html
@@ -80,7 +80,7 @@
             </ul>
         </section>
         <section class="Right">
-            <img src="profile.jpg" alt="Student Name" style="width: 70px;" id="profile">
+            <img src="kautilya.jpg" alt="Kautilya" style="width: 70px;" id="profile">
             <br>
             <h2>Kautilya Jaiswal</h2>
             <p>A motivated and curious Information Technology undergraduate, actively building foundational knowledge in cybersecurity. Passionate
