Day 4 commit> To-Do App  Progress('add' made functional on console & little bit of CSS)

--- a/Project/Web Resume/MyWebResume.html
+++ b/Project/Web Resume/MyWebResume.html
@@ -52,9 +52,10 @@
         #project-list{
             padding-left: 20px;
         }
-        @media screen and (max-width:760px){
+        @media screen and (501px<width<768px){
             main{
                 flex-direction: column;
+                background-color: azure;
             }
             .Left{
                 width:100vw;
