--- a/Project/ToDo App/index.html
+++ b/Project/ToDo App/index.html
@@ -4,60 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo App</title>
+    <script src="scripts/controller.js" defer type="module"></script>  <!-- defer is used to run the javascript after reading the body
+    async makes code run faster by running it paralelly bindvents make the window's html to load first, we need to add and event listener 'load' -->
+    <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <body>
-    <div id="todo-form">
-        <h1>To Do App</h1>
-        <div>
-        <label for="">Task Id</label>
-        <input type="text" placeholder="Type Id here">
+    <div class="container">
+        <div id="todo-form">
+            <h1>To Do App</h1>
+            <div>
+                <label for="" id="task-id">Task Id</label>
+                <input type="text" placeholder="Type Id here">
+            </div>
+            <div>
+                <label for="" id="task-name"> Task Name</label>
+                <input type="text" placeholder="Type Name here">
+                <span id="name-error"></span>
+            </div>
+            <div>
+                <label for="" id="description">Description</label>
+                <textarea cols="20" rows="5"></textarea>
+            </div>
+            <div>
+             <label for="" id="date">Date</label>
+             <input type="date">
+            </div>
+            <div>
+                <label for="" id="time">Time</label>
+                <input type="time">
+            </div>
+            <div>
+                <label for="" id="photo">Photo</label>
+                <input type="url">
+            </div>
         </div>
-        <div>
-            <label for=""> Task Name</label>
-            <input type="text" placeholder="Type Name here">
+        <div id="Totals"></div>
+        <p>Total records <span id="Total">0</span> Marked records <span id="Marked">0</span> Unmarked records <span id="Unmarked">0</span></p>
+        <div id="operations">
+            <button id="add">Add</button>
+            <button id="delete">Delete</button>
+            <button id="update">Update</button>
+                <button id="search">Search</button>
+            <button id="save">Save</button>
+            <button id="clear-all">Clear all</button>
         </div>
-        <div>
-            <label for="">Description</label>
-            <textarea cols="20" rows="5"></textarea>
+        <div id="records">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Date</th>
+                        <th>Time</th>
+                        <th>Photo</th>
+                        <th>Operations</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
         </div>
-        <div>
-            <label for="">Date</label>
-            <input type="date">
-        </div>
-        <div>
-            <label for="">Time</label>
-            <input type="time">
-        </div>
-        <div>
-            <label for="">Photo</label>
-            <input type="url">
-        </div>
-    </div>
-    <div id="Totals"></div>
-    <p>Total records <span id="Total">0</span> Marked records <span id="Marked">0</span> Unmarked records <span id="Unmarked">0</span></p>
-    <div id="operations">
-        <button>Add</button>
-        <button>Delete</button>
-        <button>Update</button>
-        <button>Search</button>
-        <button>Save</button>
-        <button>Clear all</button>
-    </div>
-    <div id="records">
-        <table>
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Date</th>
-                    <th>Time</th>
-                    <th>Photo</th>
-                    <th>Operations</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
     </div>
 </body>
 </html>
