--- a/Project/ToDo App/index.html
+++ b/Project/ToDo App/index.html
@@ -10,39 +10,64 @@
 </head>
 <body>
     <div class="container">
-        <div id="todo-form" style="margin: 10px;">
-            <h1 style="color:darkolivegreen;">To Do App</h1>
-            <div class="task-details">
-                <label for="">Task Id</label>
-                <label id="id"></label>
+        <h1>To-Do Utility</h1>
+        <div id="todo-form">
+            <h2>To-Do Form</h2>
+            <div class="row">
+                <div class="col1">
+                    <label for="" class="task-details">Task Id</label>
+                </div>
+                <div class="col2">
+                    <label id="id" class="inputs"></label>
+                </div>
             </div>
-            <div class="task-details">
-                <label for="">Task Name</label>
-                <input type="text" id="task-name" class="inputs" placeholder="Type Name here">
-                <span id="name-error"></span>
+            <div class="row">
+                <div class="col1">
+                    <label for="" class="task-details">Task Name</label>
+                </div>
+                <div class="col2">
+                    <input type="text" id="task-name" class="inputs" placeholder="what to do?">
+                    <span id="name-error"></span>
+                </div>
             </div>
-            <div class="task-details">
-                <label for="">Description</label>
-                <textarea class="inputs" id="description" cols="20" placeholder="Add"></textarea>
+            <div class="row">
+                <div class="col1">
+                     <label for="" class="task-details">Description</label>
+                </div>
+                <div class="col2">
+                    <textarea class="inputs" id="description" cols="20" placeholder="add info about your task"></textarea>
+                    <span id="desc-error"></span>
+                </div>
             </div>
-            <div class="task-details">
-             <label for="">Date</label>
-             <input id="date" class="inputs" type="date" placeholder="dd/mm/yyyy">
+            <div class="row">
+                <div class="col1">
+                    <label for="" class="task-details">Date</label>
+                </div>
+                <div class="col2">
+                    <input id="date" class="inputs" type="date" placeholder="dd/mm/yyyy">
+                </div>
             </div>
-            <div class="task-details">
-                <label for="">Time</label>
-                <input class="inputs" id="time" type="time">
+            <div class="row">
+                <div class="col1">
+                    <label for="" class="task-details">Time</label>
+                </div>
+                <div class="col2">
+                    <input class="inputs" id="time" type="time">
+                </div>
             </div>
-            <div class="task-details">
-                <label for="">Photo</label>
-                <input class="inputs" type="url" id="photo" placeholder="photo link here">
+            <div class="row">
+                <div class="col1">
+                    <label for="" class="task-details">Photo</label>
+                </div>
+                <div class="col2">
+                    <input class="inputs" type="url" id="photo" placeholder="photo link here">
+                </div>
             </div>
         </div>
-        <br>
         <div id="totals">
-            <p>Total records <span id="Total">0</span> Marked records <span id="Marked">0</span> Unmarked records <span id="Unmarked">0</span></p>
+            <p>Total records <span id="Total">0</span> | Marked records <span id="Marked">0</span> | Unmarked records <span id="Unmarked">0</span></p>
         </div>
-        <div id="operations" style="margin: 50px;">
+        <div id="operations">
             <button id="add"><strong>Add</strong></button>
             <button id="delete"><strong>Delete</strong></button>
             <button id="update"><strong>Update</strong></button>
@@ -50,8 +75,8 @@
             <button id="save"><strong>Save</strong></button>
             <button id="clear-all"><strong>Clear all</strong></button>
         </div>
-        <div id="records" style="margin: 10px;">
-            <table>
+        <div id="records">
+            <table cellspacing="0" cellpadding="5" border="0">
                 <thead>
                     <tr>
                         <th>Id</th>
